--- a/app/src/main/res/layout/item_gas_station.xml
+++ b/app/src/main/res/layout/item_gas_station.xml
@@ -20,6 +20,15 @@
         android:layout_marginTop="4dp" />
 
     <TextView
+        android:id="@+id/text_location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:textStyle="italic"
+        android:textColor="#555555"
+        android:layout_marginTop="2dp" />
+
+    <TextView
         android:id="@+id/text_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
