--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <SwitchPreferenceCompat
-        app:key="hide_expensive_further"
-        app:title="Hide further &amp; more expensive stations"
-        app:summary="Toggles whether to filter out stations that are both further AND more expensive"
-        app:defaultValue="true" />
-
     <ListPreference
         app:key="dark_mode"
         app:title="Theme"
@@ -14,5 +8,23 @@
         app:entries="@array/theme_entries"
         app:entryValues="@array/theme_values"
         app:defaultValue="auto" />
+
+    <SwitchPreferenceCompat
+        app:key="hide_expensive_further"
+        app:title="Hide expensive farther stations"
+        app:summary="Filters out stations that are more expensive than nearer ones (Recommended)"
+        app:defaultValue="true" />
+
+    <SwitchPreferenceCompat
+        app:key="only_public_sale"
+        app:title="Hide prices for members"
+        app:summary="Show only public prices"
+        app:defaultValue="true" />
+
+    <SwitchPreferenceCompat
+        app:key="filter_by_opening_hours"
+        app:title="Hide stations"
+        app:summary="Do not show stations not open right now."
+        app:defaultValue="true" />
 
 </PreferenceScreen>
