--- a/app/src/main/res/layout/item_gas_station.xml
+++ b/app/src/main/res/layout/item_gas_station.xml
@@ -6,7 +6,10 @@
     android:layout_height="wrap_content"
     android:paddingHorizontal="16dp"
     android:paddingTop="8dp"
-    android:paddingBottom="8dp">
+    android:paddingBottom="0dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="?attr/selectableItemBackground">
 
     <!-- Station Name -->
     <TextView
@@ -106,8 +109,8 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="?attr/colorOutline"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/text_address"
+        android:layout_marginTop="2dp"
+        app:layout_constraintTop_toBottomOf="@id/price_distance_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
