🌐 Added language support

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,9 +16,9 @@
             android:id="@+id/label_product"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Producto"
             android:textSize="16sp"
-            android:layout_marginBottom="4dp" />
+            android:layout_marginBottom="4dp"
+            android:text="@string/product" />
 
         <net.canvoki.carburoid.product.ProductSpinner
             android:id="@+id/product_spinner"
