--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="theme_entries">
-        <item>Light</item>
-        <item>Dark</item>
-        <item>Auto (System Default)</item>
+        <item>@string/theme_light</item>
+        <item>@string/theme_dark</item>
+        <item>@string/theme_system</item>
     </string-array>
 
     <string-array name="theme_values">
@@ -11,4 +11,25 @@
         <item>dark</item>
         <item>auto</item>
     </string-array>
+
+    <string-array name="settings_filter_closed_labels">
+        <item>@string/settings_filter_closed_tolerance_none</item>
+        <item>@string/settings_filter_closed_tolerance_half_hour</item>
+        <item>@string/settings_filter_closed_tolerance_one_hour</item>
+        <item>@string/settings_filter_closed_tolerance_two_hours</item>
+        <item>@string/settings_filter_closed_tolerance_twelve_hours</item>
+        <item>@string/settings_filter_closed_tolerance_one_day</item>
+        <item>@string/settings_filter_closed_tolerance_never</item>
+    </string-array>
+
+    <string-array name="settings_filter_closed_values">
+        <item>0</item>
+        <item>30</item>
+        <item>60</item>
+        <item>120</item>
+        <item>720</item>
+        <item>1440</item>
+        <item>10080</item>
+    </string-array>
+
 </resources>
