--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -32,4 +32,10 @@
         <item>10080</item>
     </string-array>
 
+    <string-array name="supported_language_codes">
+        <item>ca</item>
+        <item>es</item>
+        <item>en</item>
+    </string-array>
+
 </resources>
