--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -36,6 +36,7 @@
         <item>ca</item>
         <item>es</item>
         <item>en</item>
+        <item>an</item>
     </string-array>
 
 </resources>
