--- a/app/src/main/res/values/arrays_languages.xml
+++ b/app/src/main/res/values/arrays_languages.xml
@@ -7,5 +7,6 @@
         <item>es</item>
         <item>ca</item>
         <item>an</item>
+        <item>en</item>
     </string-array>
 </resources>
