--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,7 @@
         android:textSize="16sp"
         android:layout_marginTop="8dp"
         android:visibility="gone"
+        android:gravity="center|center"
         app:layout_constraintTop_toBottomOf="@id/progress_bar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -66,6 +67,7 @@
         android:layout_height="wrap_content"
         android:textSize="18sp"
         android:visibility="visible"
+        android:gravity="center|center"
         app:layout_constraintTop_toBottomOf="@id/heading"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
